--- a/Blackbird.TestPlugin/TestPlugin.csproj
+++ b/Blackbird.TestPlugin/TestPlugin.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Product>Blackbird Test plugin</Product>
-	<Version>1.0.0</Version>
+	  <Product>Blackbird Test Plugin</Product>
+	  <AssemblyVersion>2.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
