--- a/Blackbird.TestPlugin/TestPlugin.csproj
+++ b/Blackbird.TestPlugin/TestPlugin.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <Product>Blackbird Test Plugin</Product>
+    <Description>Test plugin for demo purposes</Description>
 	  <AssemblyVersion>2.0.0</AssemblyVersion>
   	<AssemblyName>Blackbird.Test.Plugin</AssemblyName>
   </PropertyGroup>
