--- a/Blackbird.TestPlugin/TestPlugin.csproj
+++ b/Blackbird.TestPlugin/TestPlugin.csproj
@@ -5,8 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Product>Blackbird Test Plugin</Product>
-    <Description>Test plugin for demo purposes</Description>
-    <AssemblyVersion>3.0.0</AssemblyVersion>
+    <Description>Test plugin for the demo purposes</Description>
+    <AssemblyVersion>3.0.1</AssemblyVersion>
     <AssemblyName>Blackbird.Test.Plugin</AssemblyName>
   </PropertyGroup>
 
