--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
           repo: ${{ vars.GH_BUILD_REPOSITORY }}
           token: ${{ secrets.GH_PAT_TOKEN }}
           ref: develop
-          inputs: '{"repository_url": "${{ github.repository }}","branch":"${{ github.ref }}"'
+          inputs: '{"repository_url": "${{ github.repository }}","branch":"${{ github.ref }}"}'
 
       - name: Invoke workflow
         if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
