--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
           repo: ${{ vars.GH_BUILD_REPOSITORY }}
           token: ${{ secrets.GH_PAT_TOKEN }}
           ref: develop
-          inputs: '{"repository_url": "${{ github.repository }}","ref":"${{ github.ref }}"'
+          inputs: '{"repository_url": "${{ github.repository }}","ref":"${{ github.ref }}", "sha":"${{ github.sha }}'
 
       - name: Invoke workflow
         if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
